[gd_scene load_steps=3 format=3 uid="uid://bs7wkvqfrdagp"]

[ext_resource type="Script" path="res://menu_scenes/LevelEditor/Settings/ItemPermutator/item_permutator_block_item.gd" id="1_qdke3"]
[ext_resource type="PackedScene" uid="uid://b5vg0xq00ba77" path="res://Cards/block_preview.tscn" id="2_h0q5i"]

[node name="ItemPermutatorBlockItem" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(70, 90)
mouse_filter = 1
script = ExtResource("1_qdke3")

[node name="Content" type="Node2D" parent="."]

[node name="BlockPreview" parent="Content" instance=ExtResource("2_h0q5i")]
position = Vector2(30, 27)
scale = Vector2(0.15, 0.15)

[node name="EditButton" type="Button" parent="Content"]
offset_top = 70.0
offset_right = 23.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 8
text = "Edit"

[node name="DuplicateButton" type="Button" parent="Content"]
offset_left = 24.0
offset_top = 70.0
offset_right = 48.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 8
text = "Dup"

[node name="DeleteButton" type="Button" parent="Content"]
offset_left = 49.0
offset_top = 70.0
offset_right = 70.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 8
text = "Del"

[connection signal="pressed" from="Content/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="Content/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="Content/DeleteButton" to="." method="_on_delete_button_pressed"]
